# gateway

./: .flake8  .gitignore  Dockerfile  Dockerfile.envoy  Makefile  README.md  buf.gen.yaml  buf.google.yaml  buf.yaml  checks.sh  docker-compose.yaml  kafka-config.yaml  pyproject.toml
envoy/: Dockerfile  envoy-gateway.yaml  start-envoy.sh
extproc/: __init__.py  __main__.py  service.py
extproc/processors/: __init__.py  authn.py  base.py  concurrtest.py  digester.py  idempotency.py  logging.py
extproc/utils/: kafka.py  redis.py  timing.py  utils.py
schemas/envoy/config/core/v3/: base.proto
schemas/envoy/extensions/filters/http/ext_proc/v3/: processing_mode.proto
schemas/envoy/service/ext_proc/v3/: external_processor.proto
schemas/envoy/type/v3/: http_status.proto
schemas/gateway/cache/v1/: cache.proto
schemas/gateway/kafka/v1/: kafka.proto
schemas/gateway/log/v1/: log.proto
tests/mocks/auth/: Dockerfile  pyproject.toml  start.sh
tests/mocks/auth/app/: __init__.py  auth.py  crud.py  errors.py  models.py  tokens.py
tests/mocks/consumer/: Dockerfile  kafka-config.yaml  pyproject.toml  test-config.yaml
tests/mocks/consumer/app/: __init__.py  __main__.py  consumer.py  kafka.py  logs.py
tests/mocks/echoserver/: Dockerfile
tests/mocks/echoserver/app/: __init__.py  __main__.py  settings.py
tests/unit/: test_base.py  test_concurrent.py  test_digester.py  test_idempotency.py
